refactoring how the executable jar is created. the scala process_ library seems to be a moving target which is causing issues with the original approach to the assemblyLauncher sbt task.  This change removes that task and accomplishes the same result of creating an executable jar, but as part of the sbt assembly command. Additionally the sbt-assembly plugin dependency is moved to the most recent version